fixed missing title when on smaller screens, added css rule for resizing of text

--- a/app/public/stylesheets/resume.css
+++ b/app/public/stylesheets/resume.css
@@ -120,3 +120,15 @@ a{
 a:active,a:focus,a:hover{
     color:#824027
 }
+
+@media screen and (max-width: 568px){
+    .resizeme {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .resizeme {
+        font-size: 3rem;
+    }
+}
